# logic

./: .gitignore  logic.cabal  stack.yaml  unpack_deps.sh
app/: Main.hs
app/Canvas/: Event.hs  Monad.hs
shaders/: fragment.glsl  line_fragment.glsl  line_vertex.glsl  vertex.glsl
src/: Font.hs  GL.hs  Main.hs
src/Canvas/: Event.hs  Monad.hs  Shader.hs
