name:                logic
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/michael-swan/logic#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Swan
maintainer:          mswan@fastmail.com
copyright:           2016 Michael Swan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable logic-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , logic
                     , wx
                     , wxcore
                     , OpenGL
                     , timers
                     , suspend
                     , mtl
                     , bytestring
                     , GPipe
                     , binary
                     , StateVar
                     , JuicyPixels
                     , vector
                     , GLUtil
                     , diagrams-core
                     , diagrams-contrib
                     , diagrams-lib
                     , diagrams-rasterific
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/michael-swan/logic
