name:                logic
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/michael-swan/logic
license:             BSD3
license-file:        LICENSE
author:              Michael Swan
maintainer:          mswan@fastmail.com
copyright:           2016 Michael Swan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable logic
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -dynamic
  build-depends:       base
                     , wx
                     , wxcore
                     , OpenGL
                     , mtl
                     , bytestring
                     , binary
                     , StateVar
                     , vector
                     , GLUtil
                     , OpenGLRaw
                     , pcf-font
                     , pcf-font-embed
                     , template-haskell
                     , containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/michael-swan/logic
