name:                logic
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/michael-swan/logic
license:             BSD3
license-file:        LICENSE
author:              Michael Swan
maintainer:          mswan@fastmail.com
copyright:           2016 Michael Swan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable logic
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Canvas.Event
                     , Canvas.Monad
                     , Canvas.Shader
                     , Font
                     , GL
  ghc-options:         -static -O2 -ddump-cmm -ddump-stg
  -- -ddump-asm
  build-depends:       base
                     , wx
                     , wxcore
                     , mtl
                     , bytestring
                     , binary
                     , StateVar
                     , vector
                     , directory
                     , hoopl
                     , pcf-font
                     , pcf-font-embed
                     , template-haskell
                     , containers
                     , raw-strings-qq
                     , transformers
                     , gl
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/michael-swan/logic
